# kiota-serialization-json-python

./: CHANGELOG.md  Pipfile  README.md  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_publish.yml  codeql-analysis.yml  publish.yml  release.yml
kiota_serialization_json/: _version.py  json_parse_node.py  json_parse_node_factory.py  json_serialization_writer.py  json_serialization_writer_factory.py
tests/helpers/: __init__.py  entity.py  intersection_type.py  union_type.py  user.py  user2.py
tests/unit/: conftest.py  test_intersection_wrapper.py  test_json_parse_node.py  test_json_parse_node_factory.py  test_json_serialization_writer.py  test_json_serialization_writer_factory.py  test_union_wrapper.py
